--- a/app/src/main/res/layout/workout_history_listview.xml
+++ b/app/src/main/res/layout/workout_history_listview.xml
@@ -49,11 +49,23 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/workoutNumberTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0"
+                android:gravity="center"
+                android:text="1"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
                 android:id="@+id/workoutDescriptionTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
+                android:layout_marginLeft="4dp"
                 android:gravity="center"
                 android:text="TextView"
                 android:textSize="12sp" />
