--- a/app/src/main/res/layout/activity_workout_statistics.xml
+++ b/app/src/main/res/layout/activity_workout_statistics.xml
@@ -30,20 +30,28 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    >
+
+                    <TextView
+                        android:id="@+id/workoutInfoTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_margin="4dp"
+                        android:layout_weight="1"
+                        android:gravity="left|center"
+                        android:text="TextView" />
 
                     <TextView
                         android:id="@+id/generalInfoTextView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_margin="4dp"
+                        android:gravity="left|center"
                         android:text="TextView"
-                        android:textSize="10sp" />
+                        android:textSize="14sp" />
 
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/large_text" />
                 </LinearLayout>
             </HorizontalScrollView>
 
