PieChart added to statistics that shows what hangboards are used in workouts.

--- a/app/src/main/res/layout/content_workout_statistics.xml
+++ b/app/src/main/res/layout/content_workout_statistics.xml
@@ -56,6 +56,11 @@
             android:layout_width="match_parent"
             android:layout_height="400dp"/>
 
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/hangboardDistributionPieChart"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"/>
+
 
 </LinearLayout>
 
