LineChart added that shows average difficulty per hang in workouts.

--- a/app/src/main/res/layout/content_workout_statistics.xml
+++ b/app/src/main/res/layout/content_workout_statistics.xml
@@ -14,6 +14,11 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/averageDifficultyPerHang"
+            android:layout_width="match_parent"
+            android:layout_height="400dp" />
+
         <com.github.mikephil.charting.charts.HorizontalBarChart
             android:id="@+id/singleHangsOrRepeatersBarChart"
             android:layout_width="match_parent"
