--- a/app/src/main/res/layout/content_workout_statistics.xml
+++ b/app/src/main/res/layout/content_workout_statistics.xml
@@ -14,10 +14,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/averageDifficultyPerHang"
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/totalWorkloadBarChart"
             android:layout_width="match_parent"
-            android:layout_height="400dp" />
+            android:layout_height="400dp"/>
 
         <com.github.mikephil.charting.charts.HorizontalBarChart
             android:id="@+id/singleHangsOrRepeatersBarChart"
@@ -36,6 +36,11 @@
 
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/workoutIntensityChart"
+            android:layout_width="match_parent"
+            android:layout_height="400dp" />
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/averageDifficultyPerHang"
             android:layout_width="match_parent"
             android:layout_height="400dp" />
 
