--- a/app/src/main/res/layout/activity_edit_workout_info.xml
+++ b/app/src/main/res/layout/activity_edit_workout_info.xml
@@ -12,8 +12,6 @@
         android:id="@+id/hangboardImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_weight="1"
         android:alpha="0.2"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,6 +20,7 @@
         app:srcCompat="@drawable/lauta1011" />
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -47,7 +46,7 @@
             <EditText
                 android:id="@+id/workoutDescriptionEditText"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="optional short description"
@@ -61,19 +60,6 @@
                 android:text="Back" />
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/hangInfoTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:gravity="bottom"
-            android:text="TextView"
-            android:textAlignment="textStart"
-            app:layout_constraintBottom_toBottomOf="@+id/workoutInfoGridView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -93,7 +79,6 @@
 
             </GridView>
         </LinearLayout>
-
 
 
     </LinearLayout>
