Fixed a bug where dividing iwth zero was possible when counting averageWorkload in Statistics Activity.

--- a/app/src/main/res/layout/activity_edit_workout_info.xml
+++ b/app/src/main/res/layout/activity_edit_workout_info.xml
@@ -49,7 +49,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="optional short description"
+                android:hint="optional short description about the workout"
                 android:inputType="textPersonName" />
 
             <Button
