--- a/app/src/main/res/layout/content_workout_statistics.xml
+++ b/app/src/main/res/layout/content_workout_statistics.xml
@@ -15,6 +15,16 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/workoutPowerLineChart"
+            android:layout_width="match_parent"
+            android:layout_height="400dp" />
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/difficultyPerMinLineChart"
+            android:layout_width="match_parent"
+            android:layout_height="400dp" />
+
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/totalWorkloadBarChart"
             android:layout_width="match_parent"
