Scaled Line Chart added which includes workouts intensity, workload, power and difficulty per minute.

--- a/app/src/main/res/layout/content_workout_statistics.xml
+++ b/app/src/main/res/layout/content_workout_statistics.xml
@@ -16,6 +16,11 @@
     android:orientation="vertical">
 
         <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/scaledLineChart"
+            android:layout_width="match_parent"
+            android:layout_height="400dp" />
+
+        <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/workoutPowerLineChart"
             android:layout_width="match_parent"
             android:layout_height="400dp" />
