Managed to get icon showing in action bar, not sure if Should be kept or removed.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="slate">#626d71</color>
     <color name="ceramic">#cdcdc0</color>
     <color name="coffee">#977256</color>
+    <color name="gray">#808080</color>
 </resources>
