Made graph that showed difficulty per seconds in workout details, but decided to leave it out. Added textView to settings activity to show saved time controls (preferences) to user.

--- a/app/src/main/res/layout/activity_workout_details.xml
+++ b/app/src/main/res/layout/activity_workout_details.xml
@@ -33,6 +33,17 @@
                 android:id="@+id/calculatedDetailsTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+            <!--
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/workoutDifficultyPerSecondBarChart"
+                android:layout_width="match_parent"
+                android:layout_height="400dp" />
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/workoutDifficultyPerSecondLineChart"
+                android:layout_width="match_parent"
+                android:layout_height="400dp" />
+            -->
         </LinearLayout>
     </ScrollView>
 
