--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,175 +9,186 @@
     android:orientation="horizontal"
     tools:layout_editor_absoluteY="81dp">
 
+    <!--
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+-->
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:orientation="vertical"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <RelativeLayout
+            android:layout_width="350dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:gravity="end">
+
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/view_pager"
+                android:layout_width="350dp"
+                android:layout_height="150dp">
+
+
+            </android.support.v4.view.ViewPager>
+
+            <ImageView
+                android:id="@+id/leftFingerImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.9"
+                android:contentDescription="@string/finger_image" />
+
+            <ImageView
+                android:id="@+id/rightFingerImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.9"
+                android:contentDescription="@string/finger_image" />
+
+            <!--
+            <ImageView
+                android:id="@+id/templateFingerImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.9" />
+            -->
+        </RelativeLayout>
+
 
         <LinearLayout
-            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:orientation="vertical"
-            android:visibility="visible"
-            tools:layout_editor_absoluteX="140dp"
-            tools:layout_editor_absoluteY="0dp">
-
-
-            <RelativeLayout
-                android:layout_width="350dp"
-                android:layout_height="150dp"
-                android:layout_gravity="center"
-                android:gravity="end">
-
-
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/view_pager"
-                    android:layout_width="350dp"
-                    android:layout_height="150dp">
-
-
-                </android.support.v4.view.ViewPager>
-
-                <ImageView
-                    android:id="@+id/leftFingerImageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.9" />
-
-                <ImageView
-                    android:id="@+id/rightFingerImageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.9" />
-
-                <ImageView
-                    android:id="@+id/templateFingerImageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.9" />
-
-            </RelativeLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <CheckBox
-                        android:id="@+id/repeatersCheckBox"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:text="Repeaters" />
-
-                    <TextView
-                        android:id="@+id/durationTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Duration: 65min"
-                        android:textSize="12sp" />
-                </LinearLayout>
-
-                <SeekBar
-                    android:id="@+id/durationSeekBar"
-                    style="@style/Widget.AppCompat.SeekBar.Discrete"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:backgroundTint="@color/colorAccent"
-                    android:max="7"
-                    android:progress="6" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <ListView
-                    android:id="@+id/gradeListView"
-                    android:layout_width="wrap_content"
-
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginTop="0dp"
-                    android:layout_weight="3"
-                    android:choiceMode="singleChoice"
-                    android:listSelector="@color/colorAccent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                </ListView>
-
-                <ListView
-                    android:id="@+id/holdsListView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginTop="0dp"
-                    android:layout_weight="1"
-                    android:choiceMode="singleChoice"
-                    android:listSelector="?attr/colorControlHighlight"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                </ListView>
-            </LinearLayout>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="0dp"
-                android:layout_marginTop="0dp"
-                android:layout_weight="0"
-                android:gravity="bottom|right"
-                android:orientation="horizontal"
-                android:paddingTop="0dp">
+                android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/timeControlBtn"
+                <CheckBox
+                    android:id="@+id/repeatersCheckBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|left"
-                    android:layout_weight="1"
-                    android:text="Time Controls" />
+                    android:checked="true"
+                    android:text="@string/repeaters" />
 
-                <Button
-                    android:id="@+id/randomizeBtn"
+                <TextView
+                    android:id="@+id/durationTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|left"
-                    android:layout_weight="1"
-                    android:text="New 5A Workout" />
-
-                <Button
-                    android:id="@+id/startWorkoutBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|right"
-                    android:layout_weight="1"
-                    android:text="Start workout" />
-
-                <Button
-                    android:id="@+id/statsButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Statistics" />
-
+                    android:text="@string/workout_duration"
+                    android:textSize="12sp" />
             </LinearLayout>
+
+            <SeekBar
+                android:id="@+id/durationSeekBar"
+                style="@style/Widget.AppCompat.SeekBar.Discrete"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:backgroundTint="@color/colorAccent"
+                android:max="7"
+                android:progress="6" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:baselineAligned="false"
+            android:orientation="horizontal">
+
+            <ListView
+                android:id="@+id/gradeListView"
+                android:layout_width="wrap_content"
+
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_weight="3"
+                android:choiceMode="singleChoice"
+                android:listSelector="@color/colorAccent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+            </ListView>
+
+            <ListView
+                android:id="@+id/holdsListView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="0dp"
+                android:layout_weight="1"
+                android:choiceMode="singleChoice"
+                android:listSelector="?attr/colorControlHighlight"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+            </ListView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_weight="0"
+            android:gravity="bottom"
+            android:orientation="horizontal"
+            android:paddingTop="0dp">
+
+
+            <Button
+                android:id="@+id/statsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/workout_history" />
+            <Button
+                android:id="@+id/timeControlBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/time_controls" />
+
+            <Button
+                android:id="@+id/randomizeBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/new_workout" />
+
+
+            <Button
+                android:id="@+id/startWorkoutBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/start_workout" />
 
 
         </LinearLayout>
 
 
     </LinearLayout>
+
+
 </android.support.constraint.ConstraintLayout>
