--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -130,7 +130,7 @@
                 android:layout_marginTop="0dp"
                 android:layout_weight="1"
                 android:choiceMode="singleChoice"
-                android:listSelector="?attr/colorControlHighlight"
+                android:listSelector="@color/gray"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
