--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -14,13 +14,12 @@
         android:id="@+id/boardImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="Hangboard"
+        android:contentDescription="@string/hangboard_image"
         android:focusableInTouchMode="true"
-        android:paddingRight="0dp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/rockprodigy"
-        tools:layout_editor_absoluteY="63dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/rockprodigy" />
 
     <TextView
         android:id="@+id/infoTextView"
@@ -30,7 +29,7 @@
         android:layout_marginTop="4dp"
         android:text="xxmin left\n 1. set(1/6)"
         android:textColor="@android:color/black"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,22 +37,21 @@
         android:id="@+id/pinchZoomImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="hangboard image"
+        android:contentDescription="@string/hangboard_image"
         android:visibility="visible"
-        app:srcCompat="@drawable/beast1000"
-     />
+        app:srcCompat="@drawable/beast1000" />
 
     <ImageView
         android:id="@+id/leftHandImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="left hand image" />
+        android:contentDescription="@string/finger_image" />
 
     <ImageView
         android:id="@+id/rightHandImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="right hand  image" />
+        android:contentDescription="@string/finger_image" />
 
     <Chronometer
         android:id="@+id/lapseTimeChrono"
@@ -63,10 +61,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:layout_weight="0"
-        android:autoText="false"
         android:gravity="bottom|end"
         android:paddingBottom="40dp"
-        android:text="100"
         android:textAlignment="textEnd"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="200sp"
@@ -88,10 +84,7 @@
             android:id="@+id/gradTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="false"
-            android:layout_alignParentTop="false"
             android:layout_weight="0"
-            android:text="HOLD: , GRIP: , Difficulty: "
             android:textAlignment="textStart"
             android:textColor="@android:color/black"
             android:textSize="25sp" />
@@ -107,11 +100,12 @@
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
-                android:layout_alignParentBottom="true"
                 android:layout_weight="2"
                 android:indeterminate="false"
                 android:paddingBottom="1dp"
                 android:paddingLeft="1dp"
+                android:paddingRight="1dp"
+                android:paddingTop="1dp"
                 android:scaleY="30"
                 android:visibility="visible" />
 
@@ -120,11 +114,11 @@
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
-                android:layout_alignParentBottom="true"
                 android:layout_weight="1"
                 android:indeterminate="false"
                 android:paddingBottom="1dp"
-                android:paddingLeft="5dp"
+                android:paddingStart="5dp"
+                android:paddingTop="1dp"
                 android:scaleY="30"
                 android:visibility="visible" />
 
@@ -133,7 +127,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:layout_weight="0"
             android:gravity="center"
             android:orientation="horizontal">
@@ -142,17 +136,17 @@
                 android:id="@+id/workoutProgressButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_weight="0"
-                android:text="Workout Progress" />
+                android:text="@string/workout_progress" />
 
             <Button
                 android:id="@+id/pauseBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_weight="0"
-                android:text="pause" />
+                android:text="@string/pause" />
         </LinearLayout>
 
 
