--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -108,7 +108,7 @@
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="In Repeaters, how many times to hang a single grip (reps)" />
+                    android:text="@string/hang_info" />
 
                 <SeekBar
                     android:id="@+id/hangSeekBar"
