--- a/app/src/main/res/layout/content_workout_statistics.xml
+++ b/app/src/main/res/layout/content_workout_statistics.xml
@@ -65,6 +65,12 @@
             android:layout_width="match_parent"
             android:layout_height="400dp"/>
         -->
+        <TextView
+            android:id="@+id/scaledChartExplainedTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/scaled_line_explanation" />
+
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/scaledLineChart"
             android:layout_width="match_parent"
