--- a/app/src/main/res/layout/workout_history_listview.xml
+++ b/app/src/main/res/layout/workout_history_listview.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,7 +27,6 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
                 android:layout_weight="2"
-                android:text="TextView"
                 android:textStyle="bold" />
 
             <TextView
@@ -36,7 +36,6 @@
                 android:layout_marginEnd="4dp"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:text="TextView"
                 android:textSize="13sp" />
 
 
@@ -55,7 +54,6 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="0"
                 android:gravity="center"
-                android:text="1"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -64,10 +62,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
                 android:layout_marginLeft="4dp"
+                android:layout_weight="1"
                 android:gravity="center"
-                android:text="TextView"
                 android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
