--- a/app/src/main/res/layout/activity_workout_history.xml
+++ b/app/src/main/res/layout/activity_workout_history.xml
@@ -14,7 +14,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="75dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:layout_weight="0"
             android:orientation="horizontal">
 
@@ -26,25 +27,11 @@
                 android:text="@string/show_hidden" />
 
             <Button
-                android:id="@+id/testButton"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="erase db history" />
-
-            <Button
                 android:id="@+id/workoutDetailsButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/workout_deatils" />
-
-            <Button
-                android:id="@+id/newEntryButton"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="new entry" />
 
             <Button
                 android:id="@+id/showGraphsButton"
