sclaedLineChart replaced with scaledBarChart. Much nicer, but maybe gets cluttere with high workout numbers.

--- a/app/src/main/res/layout/content_workout_statistics.xml
+++ b/app/src/main/res/layout/content_workout_statistics.xml
@@ -71,10 +71,18 @@
             android:layout_width="match_parent"
             android:layout_height="400dp"/>
 
+
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/scaledBarChart"
+            android:layout_width="match_parent"
+            android:layout_height="400dp" />
+<!--
+
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/scaledLineChart"
             android:layout_width="match_parent"
             android:layout_height="400dp" />
+-->
 
         <TextView
             android:id="@+id/scaledChartExplainedTextView"
