--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="ceramic">#cdcdc0</color>
     <color name="coffee">#977256</color>
     <color name="gray">#808080</color>
+    <color name="darkerGray">#a9a9a9</color>
 </resources>
