--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -80,8 +80,16 @@
                     android:id="@+id/rightFingerImageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/test_01"
                     android:alpha="0.9"
                     android:contentDescription="@string/finger_image" />
+
+<!--                <ImageView
+                    android:id="@+id/rightFingerImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.9"
+                    android:contentDescription="@string/finger_image" />-->
 <!--
                 <ImageView
                     android:id="@+id/templateFingerImageView"
